<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.QuestionFragment">
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".fragment.QuestionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="QUESTION FRAGMENT"
        android:textSize="36sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/question_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/quiz_intro_text" />

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/question_one_text" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/question1_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_answer_one_text"/>

                    <RadioButton
                        android:id="@+id/question1_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_answer_two_text"/>

                    <RadioButton
                        android:id="@+id/question1_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_answer_three_text"/>

                    <RadioButton
                        android:id="@+id/question1_answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_answer_four_text"/>

                </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/question_two_text" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question2_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_answer_one_text"/>

            <RadioButton
                android:id="@+id/question2_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_answer_two_text"/>

            <RadioButton
                android:id="@+id/question2_answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_answer_three_text"/>

            <RadioButton
                android:id="@+id/question2_answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_answer_four_text"/>

        </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/question_three_text" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question3_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_answer_one_text"/>

                <RadioButton
                    android:id="@+id/question3_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_answer_two_text"/>

                <RadioButton
                    android:id="@+id/question3_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_answer_three_text"/>

                <RadioButton
                    android:id="@+id/question3_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_answer_four_text"/>

            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="WHO AM I?"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>

<include
    android:id="@+id/answer_replacement_layout"
    layout="@layout/answer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone" />

</FrameLayout>